<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <TextView
            android:layout_marginTop="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title6Frags"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/title6"

            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gm"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20dp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="30sp"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/first_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:theme="@style/NumberPickerText" />

            <TextView
                android:id="@+id/dotstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dots"
                android:textStyle="bold"

                android:textSize="40sp" />

            <NumberPicker
                android:id="@+id/second_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:theme="@style/NumberPickerText"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/btn_Back6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="200sp"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"

                />

            <TextView
                android:id="@+id/backsecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_next6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"


            >

            <TextView
                android:id="@+id/nextsecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"

                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</FrameLayout>