<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/title5Frag"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/title5" />
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_marginTop="20dp"
            app:checkedButton="@+id/ft"
            android:layout_gravity="center"
            >
            <Button
                android:id="@+id/ft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit"


                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />
            <Button
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_in_cm"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/ft"
                        android:textColor="@color/blue"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:text="@string/inch"
                        android:textColor="@color/blue"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/first_number_ft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textStyle="bold"
                        android:theme="@style/NumberPickerText" />

                    <TextView
                        android:id="@+id/textviewdot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <NumberPicker

                        android:id="@+id/second_number_inch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:theme="@style/NumberPickerText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
               >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:text="CM"
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <NumberPicker
                        android:id="@+id/cmnumberpicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textStyle="bold"
                        android:theme="@style/NumberPickerText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/btn_Back5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="200sp"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"

                />

            <TextView
                android:id="@+id/backsecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_next5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:id="@+id/nextsecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"

                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</FrameLayout>